[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dendro_text"
description = "Draw dendrogram of similarity between text files"
authors = [{name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com"}]
license = {text = "BSD 2-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.16.1",
    "scipy",
    "pygments",
    # matplotlib  # for option -p
    "tqdm",
    "init-attrs-with-kwargs>=0.2.0",
    "win-wildcard>=0.5.0",
]
dynamic = ["version"]

[project.readme]
file = "README-pypi.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/tos-kamiya/dendro_text"

[project.optional-dependencies]
docopt-ng = ["docopt-ng"]
docopt = ["docopt"]

[project.scripts]
dendro_text = "dendro_text.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
dendro_text = [
    "VERSION",
    "Blocks.txt",
]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {file = ["dendro_text/VERSION"]}

[tool.tox.tox]
envlist = "py38, py39, py310"

[tool.gh-actions]
python = """
3.8: py38
3.9: py39
3.10: py310"""

[tool.testenv]
commands = """
python -m pip install docopt-ng
python -m unittest discover"""
