[metadata]
name = dendro_text
version = file:dendro_text/VERSION

[options.entry_points]
console_scripts = 
    dendro_text=dendro_text:main

[options.package_data]
dendro_text = VERSION

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    scipy
    docopt
    pygments
    pyxDamerauLevenshtein
    # matplotlib  # for option -p
    tqdm
