[metadata]
name = dendro_text
version = file:dendro_text/VERSION

[options.entry_points]
console_scripts = 
    dendro_text=dendro_text:main

[options.package_data]
dendro_text = VERSION

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    numpy>=1.16.1
    scipy
    docopt
    pygments
    pyxDamerauLevenshtein
    # matplotlib  # for option -p
    tqdm

[tox:tox]
envlist = py38, py39, py310

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
commands =
    python -m unittest discover
