[metadata]
name = dendro_text
version = file:dendro_text/VERSION
description = Draw dendrogram of similarity among text files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tos-kamiya/dendro_text
author = Toshihiro Kamiya
author_email = kamiya@mbj.nifty.com
license = BSD 2-Clause License
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux

[options.entry_points]
console_scripts = 
    dendro_text=dendro_text:main

[options.package_data]
dendro_text = VERSION

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    numpy>=1.16.1
    scipy
    docopt
    pygments
    pyxDamerauLevenshtein
    # matplotlib  # for option -p
    tqdm

[tox:tox]
envlist = py38, py39, py310

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
commands =
    python -m unittest discover
